Fixed overlow issues on forum index on mobile, closes #99.

--- a/assets/less/classes/forum/category.less
+++ b/assets/less/classes/forum/category.less
@@ -40,7 +40,7 @@
     }
 
     &__icon {
-        flex: 0 0 auto;
+        flex: 0 0 40px;
         border-radius: 2px;
         width: 40px;
         height: 40px;
@@ -69,6 +69,10 @@
         justify-content: center;
         flex-direction: column;
         line-height: 1.5em;
+
+        @media (max-width: @site-mobile-width) {
+            flex-basis: calc(100% - 100px);
+        }
     }
 
     &__title {
